# bluesky-robust-watermarker

./: .dockerignore  .env.example  .gitignore  .npmignore  Dockerfile  LICENSE  MIGRATION.md  MIGRATION_PLAN.md  README.md  cdk.json  download_trustmark_models.py  package-lock.json  package.json  pyproject.toml  tsconfig-deploy.json
docs/: Usage.md  frontend-backend-separation.md
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
frontend/src/components/: Layout.astro  ThemeSelector.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: callback.astro  index.astro  login.astro  mypage.astro  signup.astro  verify-watermark.astro
lambda/api/auth/: callback.ts  index.ts
lambda/api/bluesky/: index.ts
lambda/batch/: embed_spectrum_watermark.py  embed_watermark.py  generate-provenance.ts  index.ts  package.json  post-to-bluesky.ts  trigger.ts  tsconfig.json  update-user-list.ts
lambda/check_result/: README.md  handler.py
lambda/common/: image-utils.ts  post-db.ts  progress_utils.py  sanitize.ts  ui-framework.ts  user-db.ts  watermark_utils.py
lambda/home/: index.ts
lambda/login/: callback.ts  index.ts  package.json
lambda/mypage/: index.ts  package.json  tsconfig.json
lambda/progress/: index.ts
lambda/signup/: index.ts  package.json  tsconfig.json
lambda/utils/: snowflake.ts  uuid.ts
lambda/verify_watermark/: __init__.py  handler.py
lib/: api-deployment-stack.ts  api-stack.ts  auth-backend-stack.ts  batch-stack.ts  database-stack.ts  frontend-deployment-stack.ts  frontend-stack.ts  home-stack.ts  login-stack.ts  mypage-stack.ts  params-resource-stack.ts  progress-stack.ts  resource-policy.ts  signup-stack.ts  verify-stack.ts  verify-watermark-stack.ts
scripts/: migrate-posts-to-dynamodb.ts  migrate-users-to-dynamodb.ts
static/: sample.html  tailwind.css  tailwind.min.css
tests/: test_watermark.py
(+7 files in other folders)
