[project]
name = "brw"
version = "0.1.0"
description = ""
authors = [
    {name = "sheep-snow",email = "71830342+sheep-snow@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.40.21,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "trustmark (>=0.8.0,<0.9.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.1"
