[tool.poetry]
name = "cr"
version = "0.1.0"
description = ""
authors = ["sheep-snow <71830342+sheep-snow@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.40.26"
pillow = "^11.3.0"
torch = "2.2.2+cpu"
torchvision = "0.17.2+cpu"
trustmark = "^0.8.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.12"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
